# quark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.h  build.h.in  hello.cpp  hello.h  quark-config.cmake.in  quark.modulemap  vcpkg-configuration.json  vcpkg.json  vcpkg.md
assets/data/: README.md
assets/data/CPlus.chan/: metadata.md  metadata.yaml
assets/data/Database.chan/: metadata.md  metadata.yaml
assets/data/Dotnet.chan/: metadata.md
assets/data/Flutter.chan/: metadata.md
assets/data/Git.chan/: metadata.md
assets/data/Kubernetes.chan/: metadata.md
assets/data/Linux.chan/: metadata.md
assets/data/Macos.chan/: metadata.md
assets/data/Nodejs.chan/: metadata.md
assets/data/Python.chan/: metadata.md
assets/data/Qt.chan/: metadata.md
assets/data/Swift.chan/: metadata.md
assets/data/Swift.chan/组合Swift和Cpp的包管理生态.note/assets/project/Native/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
assets/data/Swift.chan/组合Swift和Cpp的包管理生态.note/assets/project/Native/logger/: logger.cpp
assets/data/VScode.chan/: metadata.md
assets/data/其它.chan/: metadata.md
atom/: README.md  index.scss
atom/client/: article.tsx  clipboard.ts  editor.scss  html.ts  http.ts
atom/client/account/: account.ts
atom/client/button/: throttle.ts
atom/client/comments/: comment.ts  fingerprint.ts
atom/client/editor/: editor.scss  editor.tsx
atom/client/postoffice/: mailbox.ts
atom/common/models/: account.ts  article.ts  auth.ts  channel.ts  comment.ts  filesystem.ts  protocol.ts  tag.ts
atom/common/parser/: markdown.ts  view.tsx
atom/common/utils/: basex.ts  convert.ts  crypto.ts  datetime.ts  email.ts  hash.ts  html.ts  mime.ts  pagination.ts  query.ts  uri.ts  uuid.ts
atom/server/: article.tsx
atom/server/filesystem/: path.ts
business/articles/: article.cpp  article.h  channel.cpp  channel.h  library.cpp  library.h  notebook.cpp  notebook.h
business/filesystem/: file.cpp  file.h  file.hpp
business/models/articles/: Article.cpp  Article.h  Channel.cpp  Channel.h  Library.cpp  Notebook.cpp  Notebook.h  location.h
business/models/channel/: mail.hpp
business/pictures/: channel.h  picture.cpp  picture.h
core/graphics/: color.cpp  color.h  cube.h  point.cpp  point.h  rectangle.cpp  rectangle.h
core/string/: string.cpp  string.h
core/types/: any.h  bytes.h  datetime.cpp  email.h  float.h  integer.h  regex.h  size.h  string.cpp  string.h  uuid.h
core/uuid/: uuid.h
domain/: domain.proto  taylorpetstore.yaml
duality/: cases.cpp  cases.h  main.cpp
duality/files/: file.cpp  file.h
duality/sqlite/: sqlite.cpp  sqlite.h
infra/collection/: list.h
infra/http/: query.cpp  query.h  url.cpp  url.h
infra/media/: image.h  json.h  mime.cpp  mime.h  mime.hpp  svg.h
infra/result/: result.cpp  result.h
infra/utils/: EnumUtils.h  basex.cpp  basex.h  md5.cpp
media/: image.h  json.h  mime.cpp  mime.h  mime.hpp  query.cpp  query.h  svg.h
models/articles/: Article.h  Channel.cpp  Channel.h  Library.h  Notebook.h
models/channel/: mail.cpp
models/files/: File.cpp  File.h  File.hpp  file.h
models/pictures/: Picture.cpp  Picture.h
models/protocol/: Codes.cpp  Codes.h  CommonResult.h
neutron/: .gitignore  README.md
neutron/config/: appconfig.go
neutron/helpers/: aes.go  gin.go  jwt.go  minify.go  pagination.go  random.go  rsa.go  snowid.go  utils.go  uuid.go
neutron/services/: redis.go
quantum/: CMakeLists.txt
quantum/business/articles/: article.cpp  article.h  channel.cpp  channel.h  library.cpp  library.h  notebook.cpp  notebook.h
quantum/business/filesystem/: file.cpp  file.h
quantum/business/pictures/: channel.cpp  channel.h  picture.h
quantum/media/: image.h  svg.h
quantum/models/articles/: Article.cpp  Article.h  Channel.h  Library.cpp  Notebook.cpp  Notebook.h
quantum/models/files/: File.h
quantum/models/protocol/: Codes.cpp  Codes.h  CommonResult.cpp
quantum/services/database/: SqliteColumn.cpp  SqliteColumn.h  SqliteCommand.cpp  SqliteCommand.h  SqliteResult.h  SqliteRow.h  SqliteService.h
quantum/services/filesystem/: filesystem.h
quantum/services/http/: http.h
quantum/services/logger/: logger.cpp  logger.h
quantum/services/markdown/: MarkdownService.cpp
quantum/services/yaml/: yaml.cpp
quantum/types/: Exception.cpp  Integer.h  String.cpp  String.h  any.h  bytes.h  color.h  cube.h  email.cpp  email.h  float.h  json.h  mime.cpp  mime.h  point.h  query.h  rectangle.h  regex.h  size.h  url.h  uuid.h
quantum/utils/: EnumUtils.h  basex.h  md5.h
quark/: build.h  hello.h  quark.h
services/database/: SqliteColumn.cpp  SqliteColumn.h  SqliteCommand.cpp  SqliteCommand.h  SqliteCommand.hpp  SqliteResult.cpp  SqliteResult.h  SqliteResult.hpp  SqliteRow.cpp  SqliteRow.h  SqliteRow.hpp  SqliteService.cpp  SqliteService.h  SqliteService.hpp  sqlite_column.cpp  sqlite_column.h  sqlite_command.cpp  sqlite_command.h  sqlite_result.cpp  sqlite_result.h  sqlite_row.cpp  sqlite_row.h  sqlite_service.cpp  sqlite_service.h
services/filesystem/: filesystem.cpp  filesystem.cxx  filesystem.h  filesystem.hpp
services/logger/: logger.cpp  logger.cxx  logger.h  logger.hpp  logger.ixx
services/markdown/: MarkdownService.cpp  MarkdownService.h
services/random/: random.cpp  random.h
services/yaml/: yaml.cpp  yaml.h
tests/: CMakeLists.txt  cases.cpp  main.c  main.cpp  version.c  version.cpp  version.h
tests/basex/: basex_test.cpp
tests/files/: file.cpp
tests/string/: string_test.cpp
tests/uuid/: uuid_test.cpp
types/: Exception.cpp  Exception.h  Integer.h  String.cpp  String.h  any.h  bytes.h  color.cpp  color.h  cube.h  datetime.cpp  datetime.h  datetime.hpp  email.h  float.h  json.h  mime.cpp  mime.h  point.h  query.cpp  query.h  rectangle.h  regex.h  size.h  string.cpp  string.h  string.hpp  url.cpp  url.h  uuid.cpp  uuid.h
utils/: EnumUtils.cpp  basex.cpp  basex.h  md5.cpp  md5.h
vcpkg/: portfile.cmake  vcpkg.json
vcpkg/triplets/: arm64-android.cmake
wasm/: README.md  wasm.h
wasm/browser/: main.cpp  package.json
wasm/server/: main.cpp  package.json
(+210 files in other folders)
